# haskell-parser-benchmarks

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  cabal.project  cabal.project.local  gen-example.py  haskell-parsing-benchmarks.cabal  peak-memory.sh
bench/: Main.hs  main.hs
src/: Alex.x  Attoparsec.hs  Earley.hs  Expr.hs  FlatParse.hs  Handwritten.hs  Happy.y  Megaparsec.hs  Streamly.hs  UUParsingLib.hs
src/AlexHappy/: Grammar.y  Lexer.x
src/Attoparsec/: ByteString.hs  Text.hs
src/Handwritten/: CPS.hs  Normal.hs
src/MegaHappy/: Grammar.y  Parser.hs
src/Megaparsec/: ByteString.hs  Text.hs
src/Parsec/: ByteString.hs  Text.hs
src/Parsley/: ByteString.hs  Parser.hs  Text.hs
test/: Main.hs
