cabal-version:      2.4
name:               haskell-parsing-benchmarks
version:            0.1.0.0

author:             Finn Bender
maintainer:         mailobender77x@gmail.com

library
      build-depends:    base >=4.16.0.0,
                        bytestring ^>= 0.11,
                        parsec ^>= 3.1,
                        attoparsec ^>= 0.14,
                        megaparsec ^>= 9.2,
                        text ^>= 2.0,
                        array ^>= 0.5,
                        -- flatparse ^>= 0.3,
                        uu-parsinglib ^>= 2.9.2,
                        Earley ^>= 0.13,
                        ListLike ^>= 4.7,
                        streamly,
                        streamly-core,
                        exceptions,
                        fusion-plugin
      ghc-options:      -Wall
                        -Wextra
      exposed-modules:  Handwritten
                        Expr
                        Attoparsec.ByteString
                        Attoparsec.Text
                        Megaparsec.Text
                        Megaparsec.ByteString
                        Parsec.Text
                        Parsec.ByteString
                        -- FlatParse
                        -- Alex
                        -- Happy
                        UUParsingLib
                        Earley
                        Streamly
      hs-source-dirs:   src
      default-language: Haskell2010
      default-extensions: ImportQualifiedPost


benchmark haskell-parsing-benchmarks
    type:             exitcode-stdio-1.0
    main-is:          main.hs
    hs-source-dirs:   bench
    build-depends:    base >= 4.16.0.0,
                      tasty-bench ^>= 0.3,
                      bytestring ^>= 0.11,
                      text ^>= 2.0,
                      haskell-parsing-benchmarks,
                      fusion-plugin
    ghc-options: -O2
                 -fdicts-strict
                 -fspec-constr-recursive=16
                 -fmax-worker-args=16
                 -fplugin Fusion.Plugin
                 -rtsopts
    default-language: Haskell2010
    default-extensions: ImportQualifiedPost
