cabal-version:      2.4
name:               haskell-parsing-benchmarks
version:            0.1.0.0

author:             Finn Bender
maintainer:         mailobender77x@gmail.com

library
      build-depends:    base >=4.15.0.0,
                        bytestring ^>= 0.11,
                        transformers ^>= 0.5,
                        parsec ^>= 3.1,
                        attoparsec ^>= 0.14,
                        megaparsec ^>= 9.2,
                        text,
                        array ^>= 0.5,
                        flatparse ^>= 0.3,
                        uu-parsinglib ^>= 2.9.2,
                        Earley ^>= 0.13,
                        ListLike ^>= 4.7,
                        parsley ^>= 2.0,
      ghc-options:      -Wall
                        -Wextra
      build-tool-depends: alex:alex ^>= 3.2,
                          happy:happy ^>= 1.20,
      exposed-modules:  Expr
                        Handwritten.CPS
                        Handwritten.Normal
                        Attoparsec.ByteString
                        Attoparsec.Text
                        Megaparsec.Text
                        Megaparsec.ByteString
                        Parsec.Text
                        Parsec.ByteString
                        FlatParse
                        Alex
                        Happy
                        UUParsingLib
                        Earley
                        Parsley.Parser
                        Parsley.Text
                        Parsley.ByteString
      hs-source-dirs:   src
      default-language: Haskell2010
      default-extensions: ImportQualifiedPost


benchmark haskell-parsing-benchmarks
    type:             exitcode-stdio-1.0
    main-is:          main.hs
    hs-source-dirs:   bench
    build-depends:    base >= 4.16.0.0,
                      tasty ^>= 1.4,
                      tasty-bench ^>= 0.3,
                      haskell-parsing-benchmarks
    ghc-options:      -rtsopts
                      -with-rtsopts=-T
    default-language: Haskell2010
    default-extensions: ImportQualifiedPost
